sqlParser.py
# Generated from .\sql.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class sqlParser ( Parser ):

    grammarFileName = "sql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'('", "')'", "'='", "'.'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'!='", "'<>'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "K_ADD", "K_ALTER", "K_AND", "K_AS", "K_ASC", "K_BEGIN", 
                      "K_BY", "K_CHECK", "K_COLUMN", "K_COLUMNS", "K_COMMIT", 
                      "K_CONSTRAINT", "K_CREATE", "K_DATABASE", "K_DATABASES", 
                      "K_DEFAULT", "K_DELETE", "K_DESC", "K_DISTINCT", "K_DROP", 
                      "K_EXCEPT", "K_EXISTS", "K_FOR", "K_FOREIGN", "K_FROM", 
                      "K_FULL", "K_GROUP", "K_HAVING", "K_IGNORE", "K_IN", 
                      "K_INDEX", "K_INNER", "K_INSERT", "K_INTERSECT", "K_INTO", 
                      "K_IS", "K_JOIN", "K_KEY", "K_LEFT", "K_LIKE", "K_LIMIT", 
                      "K_MATCH", "K_NATURAL", "K_NO", "K_NOT", "K_NULL", 
                      "K_OF", "K_OFFSET", "K_ON", "K_OR", "K_ORDER", "K_PRIMARY", 
                      "K_REFERENCES", "K_RENAME", "K_ROLLBACK", "K_SELECT", 
                      "K_SET", "K_SHOW", "K_TABLE", "K_TABLES", "K_THEN", 
                      "K_TO", "K_TRANSACTION", "K_UNION", "K_UNIQUE", "K_UPDATE", 
                      "K_USE", "K_VALUES", "K_WHERE", "IDENTIFIER", "NUMERIC_LITERAL", 
                      "STRING_LITERAL", "BLOB_LITERAL", "SINGLE_LINE_COMMENT", 
                      "MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR" ]

    RULE_parse = 0
    RULE_error = 1
    RULE_sql_stmt_list = 2
    RULE_sql_stmt = 3
    RULE_create_database_stmt = 4
    RULE_alter_database_stmt = 5
    RULE_drop_database_stmt = 6
    RULE_show_databases_stmt = 7
    RULE_show_tables_stmt = 8
    RULE_use_database_stmt = 9
    RULE_alter_table_stmt = 10
    RULE_show_columns_stmt = 11
    RULE_begin_stmt = 12
    RULE_commit_stmt = 13
    RULE_factored_select_stmt = 14
    RULE_create_index_stmt = 15
    RULE_create_table_stmt = 16
    RULE_delete_stmt = 17
    RULE_drop_index_stmt = 18
    RULE_drop_table_stmt = 19
    RULE_insert_stmt = 20
    RULE_rollback_stmt = 21
    RULE_simple_select_stmt = 22
    RULE_update_stmt = 23
    RULE_column_def = 24
    RULE_type_name = 25
    RULE_column_constraint = 26
    RULE_expr = 27
    RULE_foreign_key_clause = 28
    RULE_table_constraint = 29
    RULE_ordering_term = 30
    RULE_common_table_expression = 31
    RULE_result_column = 32
    RULE_table_or_subquery = 33
    RULE_join_clause = 34
    RULE_join_operator = 35
    RULE_join_constraint = 36
    RULE_select_core = 37
    RULE_compound_operator = 38
    RULE_cte_table_name = 39
    RULE_signed_number = 40
    RULE_literal_value = 41
    RULE_unary_operator = 42
    RULE_error_message = 43
    RULE_module_argument = 44
    RULE_column_alias = 45
    RULE_keyword = 46
    RULE_name = 47
    RULE_function_name = 48
    RULE_database_name = 49
    RULE_table_name = 50
    RULE_table_or_index_name = 51
    RULE_new_table_name = 52
    RULE_new_database_name = 53
    RULE_column_name = 54
    RULE_collation_name = 55
    RULE_foreign_table = 56
    RULE_index_name = 57
    RULE_trigger_name = 58
    RULE_view_name = 59
    RULE_module_name = 60
    RULE_table_alias = 61
    RULE_transaction_name = 62
    RULE_any_name = 63

    ruleNames =  [ "parse", "error", "sql_stmt_list", "sql_stmt", "create_database_stmt", 
                   "alter_database_stmt", "drop_database_stmt", "show_databases_stmt", 
                   "show_tables_stmt", "use_database_stmt", "alter_table_stmt", 
                   "show_columns_stmt", "begin_stmt", "commit_stmt", "factored_select_stmt", 
                   "create_index_stmt", "create_table_stmt", "delete_stmt", 
                   "drop_index_stmt", "drop_table_stmt", "insert_stmt", 
                   "rollback_stmt", "simple_select_stmt", "update_stmt", 
                   "column_def", "type_name", "column_constraint", "expr", 
                   "foreign_key_clause", "table_constraint", "ordering_term", 
                   "common_table_expression", "result_column", "table_or_subquery", 
                   "join_clause", "join_operator", "join_constraint", "select_core", 
                   "compound_operator", "cte_table_name", "signed_number", 
                   "literal_value", "unary_operator", "error_message", "module_argument", 
                   "column_alias", "keyword", "name", "function_name", "database_name", 
                   "table_name", "table_or_index_name", "new_table_name", 
                   "new_database_name", "column_name", "collation_name", 
                   "foreign_table", "index_name", "trigger_name", "view_name", 
                   "module_name", "table_alias", "transaction_name", "any_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    K_ADD=20
    K_ALTER=21
    K_AND=22
    K_AS=23
    K_ASC=24
    K_BEGIN=25
    K_BY=26
    K_CHECK=27
    K_COLUMN=28
    K_COLUMNS=29
    K_COMMIT=30
    K_CONSTRAINT=31
    K_CREATE=32
    K_DATABASE=33
    K_DATABASES=34
    K_DEFAULT=35
    K_DELETE=36
    K_DESC=37
    K_DISTINCT=38
    K_DROP=39
    K_EXCEPT=40
    K_EXISTS=41
    K_FOR=42
    K_FOREIGN=43
    K_FROM=44
    K_FULL=45
    K_GROUP=46
    K_HAVING=47
    K_IGNORE=48
    K_IN=49
    K_INDEX=50
    K_INNER=51
    K_INSERT=52
    K_INTERSECT=53
    K_INTO=54
    K_IS=55
    K_JOIN=56
    K_KEY=57
    K_LEFT=58
    K_LIKE=59
    K_LIMIT=60
    K_MATCH=61
    K_NATURAL=62
    K_NO=63
    K_NOT=64
    K_NULL=65
    K_OF=66
    K_OFFSET=67
    K_ON=68
    K_OR=69
    K_ORDER=70
    K_PRIMARY=71
    K_REFERENCES=72
    K_RENAME=73
    K_ROLLBACK=74
    K_SELECT=75
    K_SET=76
    K_SHOW=77
    K_TABLE=78
    K_TABLES=79
    K_THEN=80
    K_TO=81
    K_TRANSACTION=82
    K_UNION=83
    K_UNIQUE=84
    K_UPDATE=85
    K_USE=86
    K_VALUES=87
    K_WHERE=88
    IDENTIFIER=89
    NUMERIC_LITERAL=90
    STRING_LITERAL=91
    BLOB_LITERAL=92
    SINGLE_LINE_COMMENT=93
    MULTILINE_COMMENT=94
    SPACES=95
    UNEXPECTED_CHAR=96

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    def get_param(self, param):
        return param



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(sqlParser.EOF, 0)

        def sql_stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sqlParser.Sql_stmt_listContext)
            else:
                return self.getTypedRuleContext(sqlParser.Sql_stmt_listContext,i)


        def error(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sqlParser.ErrorContext)
            else:
                return self.getTypedRuleContext(sqlParser.ErrorContext,i)


        def getRuleIndex(self):
            return sqlParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = sqlParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sqlParser.T__0) | (1 << sqlParser.K_ALTER) | (1 << sqlParser.K_BEGIN) | (1 << sqlParser.K_COMMIT) | (1 << sqlParser.K_CREATE) | (1 << sqlParser.K_DELETE) | (1 << sqlParser.K_DROP) | (1 << sqlParser.K_INSERT))) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & ((1 << (sqlParser.K_ROLLBACK - 74)) | (1 << (sqlParser.K_SELECT - 74)) | (1 << (sqlParser.K_SHOW - 74)) | (1 << (sqlParser.K_UPDATE - 74)) | (1 << (sqlParser.K_USE - 74)) | (1 << (sqlParser.UNEXPECTED_CHAR - 74)))) != 0):
                self.state = 130
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [sqlParser.T__0, sqlParser.K_ALTER, sqlParser.K_BEGIN, sqlParser.K_COMMIT, sqlParser.K_CREATE, sqlParser.K_DELETE, sqlParser.K_DROP, sqlParser.K_INSERT, sqlParser.K_ROLLBACK, sqlParser.K_SELECT, sqlParser.K_SHOW, sqlParser.K_UPDATE, sqlParser.K_USE]:
                    self.state = 128
                    self.sql_stmt_list()
                    pass
                elif token in [sqlParser.UNEXPECTED_CHAR]:
                    self.state = 129
                    self.error()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(sqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ErrorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._UNEXPECTED_CHAR = None # Token

        def UNEXPECTED_CHAR(self):
            return self.getToken(sqlParser.UNEXPECTED_CHAR, 0)

        def getRuleIndex(self):
            return sqlParser.RULE_error

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterError" ):
                listener.enterError(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitError" ):
                listener.exitError(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitError" ):
                return visitor.visitError(self)
            else:
                return visitor.visitChildren(self)




    def error(self):

        localctx = sqlParser.ErrorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_error)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            localctx._UNEXPECTED_CHAR = self.match(sqlParser.UNEXPECTED_CHAR)
            raise Exception("UNEXPECTED_CHAR=" + (None if localctx._UNEXPECTED_CHAR is None else localctx._UNEXPECTED_CHAR.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sql_stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sql_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sqlParser.Sql_stmtContext)
            else:
                return self.getTypedRuleContext(sqlParser.Sql_stmtContext,i)


        def getRuleIndex(self):
            return sqlParser.RULE_sql_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSql_stmt_list" ):
                listener.enterSql_stmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSql_stmt_list" ):
                listener.exitSql_stmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSql_stmt_list" ):
                return visitor.visitSql_stmt_list(self)
            else:
                return visitor.visitChildren(self)




    def sql_stmt_list(self):

        localctx = sqlParser.Sql_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sql_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sqlParser.T__0:
                self.state = 140
                self.match(sqlParser.T__0)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.sql_stmt()
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 147
                        self.match(sqlParser.T__0)
                        self.state = 150 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==sqlParser.T__0):
                            break

                    self.state = 152
                    self.sql_stmt() 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 158
                    self.match(sqlParser.T__0) 
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sql_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_database_stmt(self):
            return self.getTypedRuleContext(sqlParser.Create_database_stmtContext,0)


        def alter_database_stmt(self):
            return self.getTypedRuleContext(sqlParser.Alter_database_stmtContext,0)


        def drop_database_stmt(self):
            return self.getTypedRuleContext(sqlParser.Drop_database_stmtContext,0)


        def show_databases_stmt(self):
            return self.getTypedRuleContext(sqlParser.Show_databases_stmtContext,0)


        def show_tables_stmt(self):
            return self.getTypedRuleContext(sqlParser.Show_tables_stmtContext,0)


        def use_database_stmt(self):
            return self.getTypedRuleContext(sqlParser.Use_database_stmtContext,0)


        def create_table_stmt(self):
            return self.getTypedRuleContext(sqlParser.Create_table_stmtContext,0)


        def alter_table_stmt(self):
            return self.getTypedRuleContext(sqlParser.Alter_table_stmtContext,0)


        def show_columns_stmt(self):
            return self.getTypedRuleContext(sqlParser.Show_columns_stmtContext,0)


        def begin_stmt(self):
            return self.getTypedRuleContext(sqlParser.Begin_stmtContext,0)


        def commit_stmt(self):
            return self.getTypedRuleContext(sqlParser.Commit_stmtContext,0)


        def create_index_stmt(self):
            return self.getTypedRuleContext(sqlParser.Create_index_stmtContext,0)


        def delete_stmt(self):
            return self.getTypedRuleContext(sqlParser.Delete_stmtContext,0)


        def drop_index_stmt(self):
            return self.getTypedRuleContext(sqlParser.Drop_index_stmtContext,0)


        def drop_table_stmt(self):
            return self.getTypedRuleContext(sqlParser.Drop_table_stmtContext,0)


        def factored_select_stmt(self):
            return self.getTypedRuleContext(sqlParser.Factored_select_stmtContext,0)


        def insert_stmt(self):
            return self.getTypedRuleContext(sqlParser.Insert_stmtContext,0)


        def rollback_stmt(self):
            return self.getTypedRuleContext(sqlParser.Rollback_stmtContext,0)


        def simple_select_stmt(self):
            return self.getTypedRuleContext(sqlParser.Simple_select_stmtContext,0)


        def update_stmt(self):
            return self.getTypedRuleContext(sqlParser.Update_stmtContext,0)


        def getRuleIndex(self):
            return sqlParser.RULE_sql_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSql_stmt" ):
                listener.enterSql_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSql_stmt" ):
                listener.exitSql_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSql_stmt" ):
                return visitor.visitSql_stmt(self)
            else:
                return visitor.visitChildren(self)




    def sql_stmt(self):

        localctx = sqlParser.Sql_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sql_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 164
                self.create_database_stmt()
                pass

            elif la_ == 2:
                self.state = 165
                self.alter_database_stmt()
                pass

            elif la_ == 3:
                self.state = 166
                self.drop_database_stmt()
                pass

            elif la_ == 4:
                self.state = 167
                self.show_databases_stmt()
                pass

            elif la_ == 5:
                self.state = 168
                self.show_tables_stmt()
                pass

            elif la_ == 6:
                self.state = 169
                self.use_database_stmt()
                pass

            elif la_ == 7:
                self.state = 170
                self.create_table_stmt()
                pass

            elif la_ == 8:
                self.state = 171
                self.alter_table_stmt()
                pass

            elif la_ == 9:
                self.state = 172
                self.show_columns_stmt()
                pass

            elif la_ == 10:
                self.state = 173
                self.begin_stmt()
                pass

            elif la_ == 11:
                self.state = 174
                self.commit_stmt()
                pass

            elif la_ == 12:
                self.state = 175
                self.create_index_stmt()
                pass
